# hidden-gems-fbla-2026

./: .env.example  .env.pythonanywhere  .gitignore  CHATBOT_CODE_COMMENTS.md  CHATBOT_IMPLEMENTATION_COMPLETE.md  CHATBOT_QUICK_START.md  CHATBOT_SETUP.md  CLEANUP_REPORT.md  CODE_CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.txt  DESKTOP_APP_GUIDE.md  DESKTOP_OPTIONS.md  DESKTOP_QUICKSTART.md  DESKTOP_SETUP_COMPLETE.md  EMAIL_SETUP.md  FINAL_SUMMARY.md  GITHUB_README.md  GOOGLE_MAPS_DEPLOYMENT.md  GOOGLE_MAPS_QUICK_START.md  GROQ_CHATBOT_SETUP.md  IMPLEMENTATION_COMPLETE.md  PREFERENCES_FIX_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  README.md  README_DESKTOP.md  README_USER_FEATURES.md  SHARING_GUIDE.md  STATUS_FINAL.txt  USER_FEATURES_TESTING.md  YELP_SETUP.md  build-desktop.sh  config.example.py  inspect_map.py  launcher.py  main.py  package.json  render.yaml  requirements.txt  (+10 more)
config/: config.example.py
docs/: ARCHITECTURE.md  CHATBOT_SETUP.md  DATABASE.md  DEPLOYMENT.md  EMAIL_SETUP.md  GOOGLE_MAPS_IMPLEMENTATION.md  GOOGLE_MAPS_SETUP.md  GROQ_CHATBOT_SETUP.md  QUICK_REFERENCE.md  YELP_SETUP.md
java-app/: .gitignore  README.md  docker-compose.yml
java-app/backend/: Dockerfile  pom.xml
java-app/frontend/: index.html  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: geocode_businesses.py
src/: __init__.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_map_comprehensive.py  test_map_load.py
web/: __init__.py  app.py
(+95 files in other folders)
