[package]
name = "hidden-gems-desktop"
version = "1.0.0"
description = "Hidden Gems - Desktop Application"
authors = ["FBLA 2026"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "path-all", "fs-all", "shell-open"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

[[bin]]
name = "hidden-gems-desktop"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
